adiciona modelo Instituicao, atualiza dependências do Chart.js, ajusta controlador de dropdown e melhora política de segurança de conteúdo

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -9,21 +9,19 @@
             <span class="self-center text-2xl font-semibold whitespace-nowrap text-purple-300">Genius360</span>
         <% end %>
 
-        <div class="flex items-center md:order-2 space-x-3 rtl:space-x-reverse">
-          <button type="button" 
-                  class="flex items-center rounded-lg gap-2 text-gray-700 focus:ring-2 focus:ring-gray-300 font-medium rounded-full text-sm px-4 py-2.5 transition-colors duration-200 ease-in-out dark:text-white" 
-                  id="dropdownInformationButton" 
-                  data-dropdown-toggle="dropdownInformation">
-            <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+        <div class="flex items-center md:order-2 space-x-3 rtl:space-x-reverse" data-controller="nav-dropdown">
+          <button type="button"
+               data-action="nav-dropdown#toggleUserDropdown"
+               class="cursor-pointer flex text-sm bg-transparent rounded-full md:me-0 focus:ring-4 focus:ring-purple-300"
+               id="user-menu-button"
+               aria-expanded="false">
+            <svg class="w-6 h-6 text-white" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z" clip-rule="evenodd"></path>
             </svg>
-            <svg class="w-4 h-4 ml-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
-            </svg>
-            </button>
+          </button>
             
-            <div class="z-10 hidden bg-purple-900 rounded-lg backdrop-blur-sm shadow-2xl shadow-purple-500/50 w-44 dark:bg-gray-800/80" 
-              id="dropdownInformation">
+          <div class="z-50 hidden bg-purple-900 rounded-lg backdrop-blur-sm shadow-2xl shadow-purple-500/50 w-44 absolute top-12 right-4" 
+              data-nav-dropdown-target="userDropdown">
             <div class="px-4 py-3 text-sm text-center text-gray-100 dark:text-white">
               <% if user_signed_in? %>
               <div class="font-medium text-center"><%= current_user.name %></div>
@@ -53,9 +51,6 @@
                   aria-controls="navbar-user" 
                   aria-expanded="false">
             <span class="sr-only">Open main menu</span>
-            <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
-              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
-            </svg>
           </button>
         </div>
 
