--- a/app/views/admin/propostas/new.html.erb
+++ b/app/views/admin/propostas/new.html.erb
@@ -2,7 +2,7 @@
   <h2 class="mb-8 text-white text-center font-bold text-2xl">Nova Proposta</h2>
 
   <div class="p-12 max-w-6xl mx-auto bg-indigo-900 rounded-xl backdrop-blur border-transparent bg-clip-padding">
-    <%= form_with(model: [:admin, @proposta], local: true, class: "space-y-8") do |f| %>
+    <%= form_with(model: @proposta, url: admin_propostas_path, local: true, class: "space-y-8") do |f| %>
       <%# Informações Básicas %>
       <div class="bg-indigo-800/50 p-6 rounded-lg">
         <h3 class="text-white text-xl mb-4">Informações Básicas</h3>
@@ -16,7 +16,7 @@
             <%= f.label :status, class: "block text-sm font-medium text-white" %>
             <%= f.select :status, 
                 ['Em análise', 'Aprovada', 'Recusada'], 
-                {}, 
+                {prompt: "Selecione um status"}, 
                 class: "mt-1 block w-full rounded-md border-gray-300 bg-purple-400 text-black" %>
           </div>
         </div>
